tests/ui/str/str-as-char.rs
// run-crablangfix

fn main() {
    println!('●●'); //~ ERROR character literal may only contain one codepoint
}
